--- a/src/index.scss
+++ b/src/index.scss
@@ -19,3 +19,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.app-footer {
+  height: 50px;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+}
