-student list WIP

--- a/src/index.scss
+++ b/src/index.scss
@@ -25,3 +25,11 @@ code {
   position: fixed;
   bottom: 0;
 }
+
+.student {
+  border-radius: 3px;
+  min-width:30px;
+  min-height: 30px;
+  text-align: center;
+  padding-top: 4px;
+}
