--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,14 @@
 
+.app-home-footer {
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+}
+
+.student {
+  border-radius: 3px;
+  min-width:30px;
+  min-height: 30px;
+  text-align: center;
+  padding-top: 4px;
+}
