--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,20 @@
   text-align: center;
   padding-top: 4px;
 }
+
+.avatar-circle {
+  width: 40px;
+  height: 40px;
+  background-color: maroon;
+  text-align: center;
+  color: white;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+}
+
+.avatar-text {
+  padding-top: 7px;
+  font-weight: bolder;
+  font-size: larger;
+}
