Added school details on dashboard

--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,10 @@
   font-weight: bolder;
   font-size: larger;
 }
+
+.school-name {
+  width: 70%;
+  text-align: -webkit-center;
+  font-weight: bolder;
+  font-size: larger;
+}
